--- a/index.html
+++ b/index.html
@@ -10543,7 +10543,7 @@
                       ></path></svg></a
                   ><a
                     class="mr-5 icon"
-                    href=""
+                    href="https://github.com/shilpi30112001/My-Resume/blob/main/SHILPA%20SAHU%20RESUME.pdf"
                     target="_blank"
                     rel="noreferrer"
                     ><svg
